--- a/code/docker/keras/keras-study-notebook.ipynb
+++ b/code/docker/keras/keras-study-notebook.ipynb
@@ -169,7 +169,212 @@
    },
    "outputs": [],
    "source": [
-    ""
+    "import caffe_pb2 as caffe\n",
+    "import numpy as np\n",
+    "\n",
+    "p = caffe.NetParameter()\n",
+    "p.ParseFromString(\n",
+    "    open('model/conv3d_deepnetA_sport1m_iter_1900000', 'rb').read()\n",
+    ")\n",
+    "\n",
+    "def rot90(W):\n",
+    "    for i in range(W.shape[0]):\n",
+    "        for j in range(W.shape[1]):\n",
+    "            for k in range(W.shape[2]):\n",
+    "                W[i, j, k] = np.rot90(W[i, j, k], 2)\n",
+    "    return W\n",
+    "\n",
+    "params = []\n",
+    "conv_layers_indx = [1, 4, 7, 9, 12, 14, 17, 19]\n",
+    "fc_layers_indx = [22, 25, 28]\n",
+    "\n",
+    "for i in conv_layers_indx:\n",
+    "    layer = p.layers[i]\n",
+    "    weights_b = np.array(layer.blobs[1].data, dtype=np.float32)\n",
+    "    weights_p = np.array(layer.blobs[0].data, dtype=np.float32).reshape(\n",
+    "        layer.blobs[0].num, layer.blobs[0].channels, layer.blobs[0].length,\n",
+    "        layer.blobs[0].heights, layer.blobs[0].width\n",
+    "    )\n",
+    "    weithts_p = rot90(weights_p)\n",
+    "    params.append([weights_p, weights_b])\n",
+    "    \n",
+    "for i in fc_layers_indx:\n",
+    "    layer = p.layers[i]\n",
+    "    weights_b = np.array(layer.blobs[1].data, dtype=np.float32)\n",
+    "    weights_p = np.array(layer.blobs[0].data, dtype=np.float32).reshape(\n",
+    "        layer.blobs[0].num, layer.blobs[0].channels, layer.blobs[0].length,\n",
+    "        layer.blobs[0].length, layer.blobs[0].width)[0,0,0,:,:].T\n",
+    "    params.append([weights_p, weights_b])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Now that all the parameter loaded, let put it into the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_layers_indx = [0, 2, 4, 5, 7, 8, 10, 11] + [15, 17, 19]\n",
+    "for i, j in zip(model_layers_indx, range(11)):\n",
+    "    model_layers[i].set_weights(params[j])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Get the model weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "\n",
+    "model.save_weghts(\"sports1M_weights.h5\", overwrite=True)\n",
+    "json_string = model.to_json()\n",
+    "with open(\"sports1M_model.json\", \"w\") as f:\n",
+    "    f.write(json_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import model_from_json\n",
+    "\n",
+    "model = model_from_json(open(\"sports1M_model.json\", \"r\").read())\n",
+    "model.load_weights(\"sports1M_weights.h5\")\n",
+    "model.compile(loss=\"mean_squared_error\", optimizer=\"sgd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "For testing, we are going to load the weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"./model/lebels.txt\", \"r\") as f:\n",
+    "    labels = [line.strip() for line in f.readlines()]\n",
+    "print(\"Total labels: {}\".format(len(label)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "For testing we are going to load video from the Suports1M data sets and pass it through the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "cap = cv2.VideoCapture(\"dM06AMFLsrc.mp4\")\n",
+    "\n",
+    "vid = []\n",
+    "while True:\n",
+    "    ret, img = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "    vid.append(cv2.resize(img, (171, 128)))\n",
+    "vid = np.array(vid, dtype=np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Plot a frame of the video"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "plt.imshow(vid[2000]/256)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Now form the video extra 16 fram clip and crop the center to get 3*16*112*112"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = vid[2000:2016, 8:120, 30:142, :].transpose((3, 0, 1, 2))\n",
+    "output = model.predict_on_batch(np.array(X))\n",
+    "plt.plot(output[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Position of maximum probability: {}\".format(output[0].argmax()))\n",
+    "print(\"Maximum probability: {:.5f}\".format(max(output[0][0])))\n",
+    "print(\"Corresponding label: {}\".format(labels[output[0].argmax()]))\n",
+    "\n",
+    "top_inds = output[0][0].argsort()[::-1][:5]\n",
+    "print(\"\\nTop 5 probabilities and labels:\")\n",
+    "_ = [print(\"{*.5f} {}\".format(output[0][0][i], labels[i])) for i in top_inds]"
    ]
   }
  ],
