--- a/code/docker/keras/keras-study-notebook.ipynb
+++ b/code/docker/keras/keras-study-notebook.ipynb
@@ -169,7 +169,7 @@
    },
    "outputs": [],
    "source": [
-    "import caffe_pb2 as caffe\n",
+    "from caffe.proto import caffe_pb2 as caffe\n",
     "import numpy as np\n",
     "\n",
     "p = caffe.NetParameter()\n",
