--- a/code/keras/keras-study-notebook-without-caffe.ipynb
+++ b/code/keras/keras-study-notebook-without-caffe.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -167,72 +167,6 @@
    },
    "source": [
     "# Loding Paramater"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from caffe.proto import caffe_pb2 as caffe\n",
-    "import numpy as np\n",
-    "\n",
-    "p = caffe.NetParameter()\n",
-    "p.ParseFromString(\n",
-    "    open('../model/model/conv3d_deepnetA_sport1m_iter_1900000', 'rb').read()\n",
-    ")\n",
-    "\n",
-    "def rot90(W):\n",
-    "    for i in range(W.shape[0]):\n",
-    "        for j in range(W.shape[1]):\n",
-    "            for k in range(W.shape[2]):\n",
-    "                W[i, j, k] = np.rot90(W[i, j, k], 2)\n",
-    "    return W\n",
-    "\n",
-    "params = []\n",
-    "conv_layers_indx = [1, 4, 7, 9, 12, 14, 17, 19]\n",
-    "fc_layers_indx = [22, 25, 28]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "total size of new array must be unchanged",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-bacf29cb13c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     weights_p = np.array(layer.blobs[0].diff, dtype=np.float32).reshape(\n\u001b[1;32m      5\u001b[0m         \u001b[0mlayer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mblobs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnum\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mblobs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchannels\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mlayer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mblobs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mblobs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     )\n\u001b[1;32m      8\u001b[0m     \u001b[0mweights_p\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrot90\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights_p\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: total size of new array must be unchanged"
-     ],
-     "output_type": "error"
-    }
-   ],
-   "source": [
-    "for i in conv_layers_indx:\n",
-    "    layer = p.layers[i]\n",
-    "    weights_b = np.array(layer.blobs[1].data, dtype=np.float32)\n",
-    "    weights_p = np.array(layer.blobs[0].diff, dtype=np.float32).reshape(\n",
-    "        layer.blobs[0].num, layer.blobs[0].channels,\n",
-    "        layer.blobs[0].height, layer.blobs[0].width\n",
-    "    )\n",
-    "    weights_p = rot90(weights_p)\n",
-    "    params.append([weights_p, weights_b])\n",
-    "for i in fc_layers_indx:\n",
-    "    layer = p.layers[i]\n",
-    "    weights_b = np.array(layer.blobs[1].data, dtype=np.float32)\n",
-    "    weights_p = np.array(layer.blobs[0].data, dtype=np.float32).reshape(\n",
-    "        layer.blobs[0].num, layer.blobs[0].channels,\n",
-    "        layer.blobs[0].height, layer.blobs[0].width)[0,0,0,:,:].T\n",
-    "    params.append([weights_p, weights_b])"
    ]
   },
   {
@@ -522,9 +456,7 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -594,9 +526,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
