--- a/code/keras/keras-study-notebook-without-caffe.ipynb
+++ b/code/keras/keras-study-notebook-without-caffe.ipynb
@@ -334,7 +334,7 @@
     }
    ],
    "source": [
-    "with open(\"../model/model/labels.txt\", \"r\") as f:\n",
+    "with open(\"../model/labels.txt\", \"r\") as f:\n",
     "    labels = [line.strip() for line in f.readlines()]\n",
     "print(\"Total labels: {}\".format(len(labels)))"
    ]
