add ipython notebook for edward

--- a/code/keras/Edward.ipynb
+++ b/code/keras/Edward.ipynb
@@ -2,10 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -15,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -31,40 +30,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "W_0 = Normal(mu=tf.zeros([1, 2]), sigma=tf.ones([1, 2]))\n",
     "W_1 = Normal(mu=tf.zeros([2, 1]), sigma=tf.ones([2, 1]))\n",
     "b_0 = Normal(mu=tf.zeros(2), sigma=tf.ones(2))\n",
     "b_1 = Normal(mu=tf.zeros(1), sigma=tf.ones(1))\n",
     "\n",
     "x = x_train\n",
-    "y = Normal(mu=tf.matmul(tf.tanh(tf.matmul(x, W_0) + b_0), W_1) + b_1, sigma=0.1)"
+    "y = Normal(mu=tf.matmul(tf.tanh(tf.matmul(x, W_0) + b_0), W_1) + b_1, sigma=0.1)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "y_value = y.value().eval()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "\n",
+    "\n",
     "qW_0 = Normal(mu=tf.Variable(tf.zeros([1, 2])),\n",
     "             sigma=tf.nn.softplus(tf.Variable(tf.zeros([1, 2]))))\n",
     "qW_1 = Normal(mu=tf.Variable(tf.zeros([2, 1])),\n",
@@ -72,12 +65,13 @@
     "qb_0 = Normal(mu=tf.Variable(tf.zeros(2)),\n",
     "             sigma=tf.nn.softplus(tf.Variable(tf.zeros(2))))\n",
     "qb_1 = Normal(mu=tf.Variable(tf.zeros(1)),\n",
-    "             sigma=tf.nn.softplus(tf.Variable(tf.zeros(1))))"
+    "             sigma=tf.nn.softplus(tf.Variable(tf.zeros(1))))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -86,17 +80,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration    1 [  0%]: Loss = 1654.203\n",
-      "Iteration  100 [ 10%]: Loss = 844.356\n",
-      "Iteration  200 [ 20%]: Loss = 44.019\n",
-      "Iteration  300 [ 30%]: Loss = 22.194\n",
-      "Iteration  400 [ 40%]: Loss = 24.097\n",
-      "Iteration  500 [ 50%]: Loss = -6.028\n",
-      "Iteration  600 [ 60%]: Loss = -12.240\n",
-      "Iteration  700 [ 70%]: Loss = -2.326\n",
-      "Iteration  800 [ 80%]: Loss = -13.470\n",
-      "Iteration  900 [ 90%]: Loss = -8.669\n",
-      "Iteration 1000 [100%]: Loss = -12.328\n"
+      "Iteration    1 [  0%]: Loss = 2099.772\n",
+      "Iteration  100 [ 10%]: Loss = 232.464\n",
+      "Iteration  200 [ 20%]: Loss = 85.389\n",
+      "Iteration  300 [ 30%]: Loss = 1.330\n",
+      "Iteration  400 [ 40%]: Loss = 1.988\n",
+      "Iteration  500 [ 50%]: Loss = -1.634\n",
+      "Iteration  600 [ 60%]: Loss = -8.098\n",
+      "Iteration  700 [ 70%]: Loss = 22.598\n",
+      "Iteration  800 [ 80%]: Loss = -14.516\n",
+      "Iteration  900 [ 90%]: Loss = -18.578\n",
+      "Iteration 1000 [100%]: Loss = -6.540\n"
      ]
     }
    ],
@@ -110,215 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.5/site-packages/matplotlib/__init__.py:1401: UserWarning:  This call to matplotlib.use() has no effect\n",
-      "because the backend has already been chosen;\n",
-      "matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
-      "or matplotlib.backends is imported for the first time.\n",
-      "\n",
-      "  warnings.warn(_use_error_msg)\n"
-     ]
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAY4AAAEKCAYAAAAFJbKyAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHi5JREFUeJzt3X20XHV97/H3hxAbY0M1IUuBkBwWi2eVpwMIonKXDwXq\nJSK6xGZVsd6Vcntt8XbplTbr1gc81hJsr7VWb7ggiGfJwiIxapSqFaUiNScYIAkNhlwCR7k1hjaG\nJshDvvePvUdOTmbP7D1n79nz8HmtNeuc2bNn9ndOMvs7v4f9/SkiMDMzy+ugugMwM7P+4sRhZmaF\nOHGYmVkhThxmZlaIE4eZmRXixGFmZoU4cZiZWSFOHGZmVogTh5mZFXJw3QFU4dBDD42RkZG6wzAz\n6xvr16//RUQszLPvQCaOkZERJiYm6g7DzKxvSNqed193VZmZWSFOHGZmVogTh5mZFTKQYxzNPP30\n00xOTvLkk0/WHUpl5syZw6JFi5g9e3bdoZjZABuaxDE5Ocm8efMYGRlBUt3hlC4i2LlzJ5OTkxx1\n1FF1h2NmA2xouqqefPJJFixYMJBJA0ASCxYsGOgWlZn1hqFJHMDAJo2GQX9/Q2t8HEZG4KCDkp/j\n43VHZENuaLqqzPrS+DgsXw579iT3t29P7gMsW1ZfXDbUhqrF0Us+9KEPcc0112Q+vnr1ajZv3tzF\niKwnrVjxXNJo2LMn2W5WEyeOHuXEYQA88kix7WZd4MSRpYJ+5bGxMY499ljOPfdctmzZAsC1117L\nGWecwcknn8wll1zCnj17uOuuu1izZg3vf//7OeWUU3jooYea7mdDYPHiYtvNusCJo5lGv/L27RDx\nXL/yDJLH+vXrufnmm9mwYQNr165l3bp1ALz5zW9m3bp13HvvvZxwwglcd911nHPOOVx00UWsXLmS\nDRs2cPTRRzfdz4bA2BjMnbv/trlzk+1mNXHiaKaCfuU777yTiy++mLlz53LIIYdw0UUXAbBx40Ze\n9apX8bKXvYzx8XE2bdrU9Pl597MBs2wZrFoFS5aAlPxctcoD41Yrz6pqpov9ypdddhmrV6/m5JNP\n5oYbbuCOO+6Y0X42gJYtc6KwnuIWRzMV9Cu/+tWvZvXq1ezdu5fdu3fz1a9+FYDdu3dz2GGH8fTT\nTzM+pSts3rx57N69+9f3s/YzM+s2J45mKuhXPu2003jb297GySefzAUXXMAZZ5wBwFVXXcVZZ53F\nK1/5So4//vhf73/ppZeycuVKTj31VB566KHM/czMuk0RUXcMpRsdHY3pCzk98MADnHDCCflfZHw8\nGdN45JGkpTE21hfdBYXfp5kZIGl9RIzm2dctjizLlsHDD8O+fcnPPkga1udcWsT6hAfHzXqBS4tY\nHxmqFscgdstNNejvb6C5tIj1kaFJHHPmzGHnzp0De3JtrMcxZ86cukOxTri0iPWRoemqWrRoEZOT\nk+zYsaPuUCrTWAHQelyziReLFyfdU9O5tIj1oKFJHLNnz/bKePacumbNZY1lvPOdcOON+3dXubSI\n9ahau6okXS/p55I2ZjwuSX8jaauk+ySd1u0YbQBVUIsst6yxjLVrXVrE+kbdYxw3AOe3ePwC4Jj0\nthz4TBdiskFX9kB0kWm0rcYyPAXc+kStiSMivg883mKXpcDnI3E38EJJh3UnOhtYZQ5EF229uEy6\nDYC6WxztHAE8OuX+ZLrtAJKWS5qQNDHIA+BWgjJP3kVbLy6TbgOg1xNHbhGxKiJGI2J04cKFdYdj\nvazMk3fR1ovLpNsA6PXE8VPgyCn3F6XbzDpX5sm7k9aLxzKsz/V64lgDvCOdXfUKYFdEPFZ3UDYA\nyjp591vXk+thWQnqno77ReCHwHGSJiW9W9Llki5Pd1kLbAO2AtcCf1hTqGbN1d31VCQR1DkN2QbK\n0JRVNxs40y8mhKS1k5W4RkaaX52+ZEnS6rKh5rLqZsOg6Iwu18OykjhxmPWrVomgWReWryGxkjhx\nmFWl6oHorBP+/PnNxzIuvLC/BvKtZzlxmFWhGwPRWTO6wPWwrFJOHGZTldVK6MbCTFkzuh7PqOLj\nelhWEs+qMmtoNUsJipVhP+igpKUxnZSctKvk2VPWAc+qMutEVivhiiuKdzvVORDdbxclWt9x4jBr\nyJqltHNn8W6nOk/edV+UaAPPicMGQxljE0VbA62uf6j75O2xDKuQE4f1v7JmMGW1EhYsaL5/u0Tj\nk7cNKCcO639lzWDKaiV88pMeMzCb4uC6AzCbsTJLaSxblt0yKDKrymyAOXFY/1u8uPn00zJnMLVK\nKGZDxl1V1v88/dSsq5w4rP/VPYPJbMg4cdhg8Aym7vNqgkPLYxxmVtz08iyNKdDgpD0E3OIws+K6\nUcTRepYTh5kV59UEh5oTh5llyxrH8GqCQ81jHGbWXKtxjLGx5iXoPQV6KLjFYYPNM38612ocw1Og\nh5oXcrLB1WphJp/g2qtzMSrrOi/kZAae+TNTHsewDE4cNrg882dmXMrFMjhx2ODyN+aZ8TiGZXDi\nsMHlb8wz51Iu1oQThw0uf2M2q4Sv47DB5nU0zErnFoeZmRXixGFmZoU4cZiZWSFOHNZfXEKkGv67\nWgG1Jg5J50vaImmrpCubPH6epF2SNqS3P68jTuuyrJNYo4TI9u1JKYxG0T2f5GbGf1crKLNWlaQ1\nOZ7/eERc1tGBpVnAg8DrgUlgHfD2iNg8ZZ/zgPdFxBuLvLZrVfWxVvWlVqxITmrTLVmSXGNgnRkZ\n8d/VCtWqajUd9wTgv7Q6DvDpIoFNcyawNSK2AUi6GVgKbG75LBtsrepLuYRINfx3tYJadVWtiIjv\ntbjdAXx4Bsc+Anh0yv3JdNt050i6T9I3JJ00g+NZr2nWJdXqJOYSItXw39UKykwcEXFLuyfn2WeG\n7gEWR8TLgU8Bq7N2lLRc0oSkiR07dlQcls1YVr/6/PnN91+82CVEquK/qxXUdnBc0qik2yTdk37z\nv1/SfSUc+6fAkVPuL0q3/VpE/DIinkh/XwvMlnRosxeLiFURMRoRowsXLiwhPKtUVpcUZJ/EXEKk\nGv67WkFtF3KStAV4P3A/8OvVWyKiyWhagQNLB5MMjr+WJGGsA343IjZN2eclwL9GREg6E/h7YEm0\nCdqD432g1SJBN9303JhGo6Xhk5hZpcoaHG/YERF5ZlgVEhHPSHoPcDswC7g+IjZJujx9/LPAW4D/\nKukZYC9wabukYX1i8eLmM3kWL3Z9KbMel6fF8Vrg7cB3gF81tkfEl6sNrXNucfQBL+tq1lPKbnG8\nCzgemM1zXVUB9GzisD7QSA7ukjLrO3kSxxkRcVzlkdjwcZeUWV/KU3LkLkknVh6JmZn1hTyJ4xXA\nhrSmVJnTcW1YuICe2UDJ01V1fuVR2OCaPgjeuNAP3E1l1qfytDgOIylmuD29duPfgJdUG5YNjFa1\np8ysL+VJHJ8Bnphy/4l0m1l7LqA3fNw1OfDyJA5NveguIvaRr4vLzAX0ho3X9hgKeRLHNkl/LGl2\nersC2FZ1YDYgXEBvuLhrcijkSRyXA+eQ1JOaBM4CllcZlA0QF9AbLq26Jt2FNTDalhzpRy45YlaT\nrNUEFyyAvXtdYqaHFSk5ktnikNS2VZFnHzMbIlldk+AurAHSapD7Skm/aPG4gCuAVeWGZGZ9K6sG\n2e/9XvP9PbuuL2V2VUn6XI7n74qI95Yb0sy5q8qsx2R1YS1ZAg8/3O1orIlSquNGxLvKC8nMhtrY\nWPMy+p5d15fyzKoyM5sZz64bKL6Qz8y6w2X0B4ZbHGZmVkjbFoek3wAuAUam7h8RH6kuLDMz61V5\nuqq+AuwC1jNlzXEzMxtOeRLHoojwmhxmZgbkXzr2ZZVHYmZmfSGzxSHpfiDSfd4laRtJV5WAiIiX\ndydEMzPrJa26qt7YtSjMzKYbHz+wdImn8/aEVleObweQdFNE7FdoRtJNQEbxGTOzGfJa9T0tzxjH\nSVPvSJoFnF5NONbXvN6ClcULQvW0VmXV/1TSbuDlkn6Z3nYDPyeZomv2HC8ZamXyWvU9LTNxRMRf\nRMQ8YGVEHJLe5kXEgoj40y7GaP3A3xCtTF6rvqfl6ar6kqTTpt2OluQ6V/Ycf0O0Mnmt+p6WJ3H8\nHXA3yYJN16a/fwnYIukNFcZm/cTfEK1TzcbGXE23p+VJHD8DTo2I0Yg4HTgF2Aa8Hri6yuCsj/gb\nonWi1djYsmXJIk/79iU/nTR6Rp7EcWxEbGrciYjNwPERsa26sKzv+BuidcJjY30pT+LYJOkzkl6T\n3v4O2JxWzX264visF2VNu/U3RCvKY2N9KU/iuAzYCrw3vW1Ltz0N/KeZHFzS+ZK2SNoq6comj0vS\n36SP3yfptJkcz0rgabdWJo+N9aW2iSMi9kbEJyLi4vR2TUTsiYh9EfFEpwdOLyT8NHABcCLwdkkn\nTtvtAuCY9LYc+Eynx7OSuGvByuSxsb7UNnFIeqWkb0l6UNK2xq2EY58JbI2IbRHxFHAzsHTaPkuB\nz0fibuCFkg4r4djWKXctWJk8NtaX8lyLcR3w30kWcnq2xGMfATw65f4kcFaOfY4AHisxDiti8eKk\ne6rZdrNOeC3yvpNnjGNXRHwjIn4eETsbt8ojK0jSckkTkiZ27NhRdziDy10LZkMvT+L4rqSVks6e\nevV4Ccf+KXDklPuL0m1F9wEgIlal15qMLly4sITwrCl3LZgNvTyJ4yxgFPgY8In0dk0Jx14HHCPp\nKEnPAy4F1kzbZw3wjnR21StIWj/upqqbp91a3VyJuVZtxzgiYkZTblu87jOS3gPcDswCro+ITZIu\nTx//LLAWuJBkOvAe4F1VxGJmfaTVWh3gxZ+6QBHRegfpxSStjcMj4oJ0yuzZEXFdNwLsxOjoaExM\nTNQdhplVYWSk+QSNBQtg7979p4vPneuu1JwkrY+I0Tz75umquoGkVXB4ev9BkgsBzcy6L2vq986d\nvsaoS/IkjkMj4hZgHyRdTJQ7LdfMLL+iU799jVHp8iSO/5C0AAiAxiB1pVGZmWXJmhK+YEHz/X2N\nUenyXAD4JySzm46W9ANgIfCWSqMyM8vSGK+YPggO+w+ag68xqkieWlX3AK8BzgH+ADgpIu6rOjCr\nmac7Wi9rNiXc1xh1TeasKklvbvXEiPhyJRGVwLOqZmj6dEfw7BSzAVdkVlWrrqr/3OKxAHo2cdgM\ntaqA68RhNvQyE0dE+GK7YTA+fmBfsSvgmlkLeQbHbVBlXYE7f34yJ346z04xM/JNx7VBldUlBa6A\na2aZnDiGWVbX0+OPe3aKmWXK7Krq51lVllOrRZm8uI6ZZfCsqmE2NuYLpsysMM+qGmZZV+C6pWFm\nLeSaVSXpd4CTgDmNbRHxkaqCsi5yl5SZFdR2cFzSZ4G3AX8ECHgrsKTiuMzMrEflmVV1TkS8A/i3\niPgwcDZwbLVhmZlZr8qTOPamP/dIOhx4GjisupDMzKyX5Rnj+JqkFwIrgXtIZlT9n0qjMjOznpUn\ncVwdEb8CbpX0NZIB8ierDcvMzHpVnq6qHzZ+iYhfRcSuqdvMzGy4ZCYOSS+RdDrwfEmnSjotvZ0H\nzM16nplZ3/CCZR1p1VX128BlwCLgr6Zs/yXwZxXGZGZWvazq0OBrm9rIXAHw1ztIl0TErV2KpxRe\nAdDM2hoZaV6rbcmSZDnaIVNkBcA8Yxw/kHSdpG+kL36ipHfPKEIzs7p5wbKO5UkcnwNuBw5P7z8I\nvLeyiMzMuiFrYTIvWNZWnsRxaETcAuwDiIhngGcrjcrMrGpjY16wrEN5Esd/SFpAcuEfkl4B7Ko0\nKjOzqi1b5gXLOpTnAsA/AdYAR0v6AbAQeEulUZmZdYOrQ3ekbYsjIu4BXgOcA/wBcFJE3Fd1YGZm\npfH1GqVq2+KQNAf4Q+Bcku6qOyV9NiJcdsTMep+v1yhdnjGOz5Ms4vQp4G/T32+qMigzs9KsWLH/\n8siQ3F+xop54BkCeMY6XRsSJU+5/V9LmqgIyMyuVr9coXZ4Wxz3pTCoAJJ0F+LLsfuM+XhtWvl6j\ndHkSx+nAXZIelvQwSWXcMyTdL6mjQXJJ8yV9S9JP0p8vytjv4fQ4GyQ5WXWq0ce7fTtEPNfH6+Rh\nw8DXa5QuT62qluuLR0STYi9tDipdDTweER+XdCXwooj4QJP9HgZGI+IXRV7ftaqmcU0eG3bj48mY\nxiOPJC2NsTEPjE9Taq2qiNje6tZhjEuBG9PfbwTe1OHrDK8iXU/u47Vht2xZ8iVp377kp5PGjOTp\nqqrCiyPisfT3/we8OGO/AL4tab2k5a1eUNJySROSJnbs2FFmrL2naNeT+3jNrESVJQ5J35a0sclt\n6dT9Iukry+ovOzciTgEuAP6bpFdnHS8iVkXEaESMLly4sLw30otaTS9s1hJxH6+ZlajtGEclB5W2\nAOdFxGOSDgPuiIjj2jznQ8ATEXFNu9cf+DGOgw5KWhrNzJ27f1KZOzepvwPu4zWzTGWvx1GFNcA7\n09/fCXxl+g6SXiBpXuN34A3Axq5F2MuyuphmzcpuibiP18xKUlfi+Djwekk/AV6X3kfS4ZLWpvu8\nGPgnSfcCPwK+HhHfrCXaXpPV9fRsRrV7D4KbWYnyXDleuojYCby2yfafARemv28DTu5yaP2h0VqY\n3vW0YkXzabceBDezEtWSOKwEWeWgpxZzAw+Cm1np6uqqsip4YRoz6wK3OAaNF6Yxs4q5xWFmZoU4\ncZiZWSFOHGZmVogTh5mZFeLEYWY2nRc+a8mzqszMpmpUn25cD9WoPg2esZhyi8PMbKpW1acNcOIw\nM9ufFz5ry4mjm9xvatb7vPBZW04c3VJ01T4zq4cXPmvLiaNb3G9q1h9c860tJ45uadVv6i4ss97i\nhc9acuLolqz+0fnz3YVlZn3FiaNbsvpNwV1YZoOgzp6DLh/biaNbsvpNH3+8+f6e+mfWm5qdpOuc\n/FLDsRURlb14XUZHR2NiYqLuMPIZGWm+3OuSJUnfqpn1julXlUPSc/D858POnQfu343PcUnnEEnr\nI2I0z75ucdTNU//M+kfW7MhmSQO603NQwwWLThx1azX1z7OtzHpL0ZNxJxcNFv3c13HBYkQM3O30\n00+PvveFL0TMnRuR9Fomt7lzk+1mVo8lS/b/TDZuCxaU83nt5HNf0rkCmIic51i3OHqVLxg06z1Z\nXcuf/GTxiwabtSw6+dzXcMGiB8er0PgP8MgjSXNxbKz4P+JBByXfHaaTkouSzKweZXy+swbZpyeN\nhi587osMjjtxlC3rP0TRbwCebWU2uLI+37NmwbPPHri9C597z6qqU1ldTJ5tZTa4sgbZn322Lz73\nThxlK2tqnAutmQ2urBlPjc95j3/unTgaypr6WubUOBdaMxtMrXoU+uBz78QB5V6y7y4mM2un0x6F\nXrm2K++83X66Fb6OI2tu9pIlrZ/3hS8k+0jJz8a86aztZjZ8yjofVHxtFwWu4/CsKuhs6mtZs6fM\nbHCVeZ6oeKalp+MWTRyd/IN4uqyZtVPmeaLia7s8HbeoTsYlaigsZmZ9pszzRB01qTLUkjgkvVXS\nJkn7JGVmOEnnS9oiaaukKysLqJOBqh76RzSzHlXmeaKHJt7U1eLYCLwZ+H7WDpJmAZ8GLgBOBN4u\n6cTKIio6Ba6H/hHNrEeVeZ7ooWu7akkcEfFARGxps9uZwNaI2BYRTwE3A0urjy6nHvpHNLMeVfZ5\nokeu8Ti4lqPmcwTw6JT7k8BZNcXS3LJlThRm1toAnicqSxySvg28pMlDKyLiKxUcbzmwHGCxxxnM\nzCpTWeKIiNfN8CV+Chw55f6idFvW8VYBqyCZjjvDY5uZWYZeno67DjhG0lGSngdcCqypOSYzs6FX\n13TciyVNAmcDX5d0e7r9cElrASLiGeA9wO3AA8AtEbGpjnjNzOw5tQyOR8RtwG1Ntv8MuHDK/bXA\n2i6GZmZmbfRyV5WZmfUgJ452eqWMsZlZj+jl6zjqN72yZWOdDhi4edlmZnm5xdFKWeuHm5kNECeO\nVlwB18zsAE4crbgCrpnZAZw4WnEFXDOzAzhxtOIKuGZmB/CsqnYGsLKlmdlMuMVhZmaFOHGYmVkh\nThxmZlaIE4eZmRXixGFmZoU4cZiZWSGKGLxVViXtALZ3+PRDgV+UGE6dBuW9DMr7AL+XXjQo7wNm\n9l6WRMTCPDsOZOKYCUkTETFadxxlGJT3MijvA/xeetGgvA/o3ntxV5WZmRXixGFmZoU4cRxoVd0B\nlGhQ3sugvA/we+lFg/I+oEvvxWMcZmZWiFscZmZWiBNHE5KuknSfpA2S/kHS4XXH1ClJKyX9S/p+\nbpP0wrpj6oSkt0raJGmfpL6bASPpfElbJG2VdGXd8XRK0vWSfi5pY92xzJSkIyV9V9Lm9P/WFXXH\n1AlJcyT9SNK96fv4cOXHdFfVgSQdEhG/TH//Y+DEiLi85rA6IukNwD9GxDOS/hIgIj5Qc1iFSToB\n2Af8b+B9ETFRc0i5SZoFPAi8HpgE1gFvj4jNtQbWAUmvBp4APh8RL607npmQdBhwWETcI2kesB54\nU7/9u0gS8IKIeELSbOCfgCsi4u6qjukWRxONpJF6AdC32TUi/iEinknv3g0sqjOeTkXEAxGxpe44\nOnQmsDUitkXEU8DNwNKaY+pIRHwfeLzuOMoQEY9FxD3p77uBB4Aj6o2quEg8kd6dnd4qPWc5cWSQ\nNCbpUWAZ8Od1x1OS3we+UXcQQ+gI4NEp9yfpwxPUIJM0ApwK/HO9kXRG0ixJG4CfA9+KiErfx9Am\nDknflrSxyW0pQESsiIgjgXHgPfVG21q795LuswJ4huT99KQ878OsbJJ+E7gVeO+03oa+ERHPRsQp\nJD0KZ0qqtBtxaJeOjYjX5dx1HFgLfLDCcGak3XuRdBnwRuC10cODWgX+TfrNT4Ejp9xflG6zmqVj\nArcC4xHx5brjmamI+HdJ3wXOByqbwDC0LY5WJB0z5e5S4F/qimWmJJ0P/A/goojYU3c8Q2odcIyk\noyQ9D7gUWFNzTEMvHVS+DnggIv6q7ng6JWlhY7akpOeTTMKo9JzlWVVNSLoVOI5kFs924PKI6Mtv\niJK2Ar8B7Ew33d2PM8QkXQx8ClgI/DuwISJ+u96o8pN0IfC/gFnA9RExVnNIHZH0ReA8kiqs/wp8\nMCKuqzWoDkk6F7gTuJ/ksw7wZxGxtr6oipP0cuBGkv9bBwG3RMRHKj2mE4eZmRXhriozMyvEicPM\nzApx4jAzs0KcOMzMrBAnDjMzK8SJw6wFSedJ+lre7SUc702STpxy/4521YDTWHZJmvE0UknPT6tC\nPyXp0Jm+ng0mJw6z3vIm4MS2ex3ozoi4cKYHj4i9aemKn830tWxwOXFYX5P0AklfT9ci2Cjpben2\n0yV9T9J6SbenJbQb3+A/mX6r3ijpzHT7mZJ+KOnHku6SdFzBGK5P10T4caO2lqTLJH1Z0jcl/UTS\n1VOe825JD6bPuVbS30o6B7gIWJnGd3S6+1vT/R6U9KqcMX1A0v3p3+XjU977X0uakPSApDPS+H4i\n6aN536/Z0NaqsoFxPvCziPgdAEm/ldYf+hSwNCJ2pMlkjKQ6MMDciDglXVvieuClJCUaXpWuW/I6\n4GPAJTljWEGy5snvp6UffiTp2+ljp5BUXf0VsEXSp4Bngf8JnAbsBv4RuDci7pK0BvhaRPx9+n4A\nDo6IM9Orzz8ItKtNdgFJqZyzImKPpPlTHn4qIkaVLFr0FeB0kjLpD0n664jY2eQlzfbjxGH97n7g\nE0oWqfpaRNyZVgZ9KfCt9MQ7C3hsynO+CMnaEpIOSU/284Ab0zplQbKmQV5vAC6S9L70/hxgcfr7\ndyJiF4CkzcASknId34uIx9PtXwKObfH6jeJ764GRHPG8DvhcozZZ4zipRo2s+4FNEfFYGsM2kkKM\nThzWlhOH9bWIeFDSacCFwEclfQe4jeSkeHbW05rcvwr4bkRcrGRthjsKhCHgkukLTUk6i6Sl0fAs\nnX3mGq/R6fObvdY+9o9tXwmvbUPCYxzW15SsB78nIr4ArCTp/tkCLJR0drrPbEknTXlaYxzkXGBX\n2iL4LZ4rdX5ZwTBuB/4orbaKpFPb7L8OeI2kF0k6mP27xHaTtH5m4lvAuyTNTeOZ32Z/s0KcOKzf\nvYxkTGEDSf//R9PlWd8C/KWke4ENwDlTnvOkpB8DnwXenW67GviLdHvRb95XkXRt3SdpU3o/U1pp\n+WPAj4AfAA8Du9KHbwbenw6yH938FVqLiG+SdElNpH+X97V5ilkhro5rQ0XSHcD7ImKi5jh+MyKe\nSFsct5GUWr+tw9c6j+Q9vbHE+B4GRiPiF2W9pg0OtzjM6vGhtDWwEfi/wOoZvNZTwEvLvACQpAW1\nr93+Npzc4jAzs0Lc4jAzs0KcOMzMrBAnDjMzK8SJw8zMCnHiMDOzQpw4zMyskP8PazzjtgLNN0kA\nAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f9ea0bcccc0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import matplotlib\n",
-    "matplotlib.use('Agg')\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
-    "plt.scatter(x_train, y_train, color=\"red\", marker=\"o\", \n",
-    "            label=\"data\")\n",
-    "\n",
-    "plt.xlabel(\"sepal length [cm]\")\n",
-    "\n",
-    "plt.ylabel(\"petal length [cm]\")\n",
-    "\n",
-    "plt.legend(loc=\"upper left\")\n",
-    "\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "x_data = np.array([0, 1, 0, 0, 0, 0, 0, 0, 0, 1])\n",
-    "x_data = tf.constant([0, 1, 0, 0, 0, 0, 0, 0, 0, 1])\n",
-    "x_datra = tf.placeholder(tf.float32, [100, 25])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Models"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<ed.RandomVariable 'Exponential_1/' shape=(2, 3) dtype=tf.float32>"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from edward.models import Normal, Exponential\n",
-    "\n",
-    "Normal(mu=tf.constant(0.0), sigma=tf.constant(1.0))\n",
-    "Normal(mu=tf.zeros(5), sigma=tf.ones(5))\n",
-    "Exponential(lam=tf.ones([2, 3]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor 'Gather_1:0' shape=() dtype=float32>"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from edward.models import Normal\n",
-    "\n",
-    "x = Normal(mu=tf.zeros(10), sigma=tf.ones(10))\n",
-    "y = tf.constant(5.0)\n",
-    "x + y, x - y, x * y, x / y\n",
-    "tf.tanh(x * y)\n",
-    "tf.gather(x, 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Composing Random Variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from edward.models import Bernoulli, Beta\n",
-    "\n",
-    "theta = Beta(a=1.0, b=1.0)\n",
-    "x = Bernoulli(p=tf.ones(50) + theta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "theta = tf.Variable(0.0)\n",
-    "x = Bernoulli(p=tf.ones(50) + tf.sigmoid(theta))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Neural Networks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from tensorflow.contrib import slim\n",
-    "\n",
-    "N = 50\n",
-    "d = 1\n",
-    "z = Normal(mu=tf.zeros([N, d]), sigma=tf.ones([N, d]))\n",
-    "h = slim.fully_connected(z, 256)\n",
-    "x = Bernoulli(logits=slim.fully_connected(h, 28 * 28, activation_fn=None))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Keras"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from keras.layers import Dense\n",
-    "\n",
-    "h = Dense(256, activation='relu')(z.value())\n",
-    "x = Bernoulli(logits=Dense(28 * 28)(h))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
